--- a/style/globalAppStyle.less
+++ b/style/globalAppStyle.less
@@ -1,9 +1,21 @@
 @import "colors.less";
 @import "constants.less";
 
+html {
+    height: 100%;
+}
 body {
+    height: 100%;
     background-color: @bg-color;
 }
 .pad-all {
     padding: @normalPadding;
+}
+.full-size-container {
+    width: 100%;
+    height: 100%;
+}
+.log-in-bg {
+    background-image: url('/img/bg/nebula.jpg');
+    background-size: cover;
 }
