--- a/style/style.css
+++ b/style/style.css
@@ -2,15 +2,68 @@
 /**Layout**/
 
 /**Layout**/
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
   background-color: #e7ebee;
 }
 .pad-all {
   padding: 15px;
 }
+.full-size-container {
+  width: 100%;
+  height: 100%;
+}
+.log-in-bg {
+  background-image: url('/img/bg/nebula.jpg');
+  background-size: cover;
+}
 
 /**@import "colors.less";
 @import "globalAppStyle.less";*/
+
+.login-form-container {
+  background-color: #dcdcdc;
+  position: absolute;
+  width: 300px;
+  height: 220px;
+  margin-left: -150px;
+  margin-top: -110px;
+  left: 50%;
+  top: 50%;
+  overflow: hidden;
+}
+.login-form-container .signin-header {
+  padding-right: 20px;
+  text-align: right;
+  width: 100%;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05);
+  background-color: #f5f5f5;
+}
+.login-form-container .authentication-await {
+  background-color: #5cbaf1 !important;
+}
+.login-form-container div {
+  padding: 15px;
+}
+.login-form-container input {
+  display: block;
+  border: 0px;
+  width: 100%;
+  height: 35px;
+  margin-top: 10px;
+}
+.login-form-container input[type='text'],
+.login-form-container input[type='password'] {
+  padding-left: 15px;
+  padding-top: 0px;
+}
+.login-form-container input[type='button'] {
+  background-color: #35bb0f;
+  text-align: center;
+}
 
 
 /**
