--- a/ts/views/authentication/LoginForm/LoginForm.html
+++ b/ts/views/authentication/LoginForm/LoginForm.html
@@ -1,1 +1,8 @@
-fdsf
+<div class="signin-header">Sign In</div>
+<div class="fields-wrapper">
+<form>
+    <input type="text" placeholder="Username"/>
+    <input type="password" placeholder="Password"/>
+    <input type="button" value="Log In"/>
+<form>
+</div>
