--- a/ts/views/authentication/LoginForm/LoginForm.html
+++ b/ts/views/authentication/LoginForm/LoginForm.html
@@ -1,8 +1,8 @@
-<div class="signin-header">Sign In</div>
-<div class="fields-wrapper">
+<div class="signin-header login-form-padd">Sign In</div>
+<div class="fields-wrapper login-form-padd">
 <form>
     <input type="text" placeholder="Username"/>
     <input type="password" placeholder="Password"/>
-    <input type="button" value="Log In"/>
+    <input type="button" data-toggle="tooltip" value="Log In"/>
 <form>
 </div>
