--- a/ts/views/authentication/LoginForm/LoginForm.less
+++ b/ts/views/authentication/LoginForm/LoginForm.less
@@ -23,7 +23,7 @@
         background-color: rgb(92,186,241) !important;
     }
 
-    div {
+    .login-form-padd {
         padding: 15px;
     }
 
