--- a/ts/views/navigation/NavigationMenu.html
+++ b/ts/views/navigation/NavigationMenu.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">OSG</a>
+            <a class="navbar-brand" href="#">AEGIR</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
             <ul class="nav navbar-nav">
