Change styles of navbar

--- a/style/colors.less
+++ b/style/colors.less
@@ -1,2 +1,3 @@
-@bg-color        : #e7ebee;
-@navbar-bg-color : #1A67A8;
+@bg-color         : #e7ebee;
+@navbar-bg-color  : #1A67A8;
+@navbar-button-bg : rgb(16, 72, 121);
