Buttons added by container

--- a/ts/views/navigation/NavigationContainer.less
+++ b/ts/views/navigation/NavigationContainer.less
@@ -15,5 +15,9 @@
         font-size:48px;
         padding-left: 8px;
         color: white;
+        background-color: @navbar-button-bg;
+        &:hover {
+            background-color: lighten(@navbar-button-bg, 20%);
+        }
     }
 }
