--- a/ts/views/navigation/NavigationContainer.less
+++ b/ts/views/navigation/NavigationContainer.less
@@ -12,12 +12,19 @@
     {
         width: 64px;
         height: 64px;
-        font-size:48px;
-        padding-left: 8px;
+        font-size:40px;
+        padding-left: 6px;
         color: white;
         background-color: @navbar-button-bg;
+        display: inline-block;
         &:hover {
             background-color: lighten(@navbar-button-bg, 20%);
+        }
+        &:last-of-type {
+            position: fixed;
+            bottom:0px;
+            left:0px;
+            padding-top: 5px;
         }
     }
 }
