--- a/style/colors.less
+++ b/style/colors.less
@@ -1,3 +1,10 @@
 @bg-color         : #e7ebee;
+/**
+ * Navbar
+ */
 @navbar-bg-color  : #1A67A8;
 @navbar-button-bg : rgb(16, 72, 121);
+/**
+ * Panels
+ */
+@pagePanelBgColor : #fff;
