added editor layout

--- a/style/globalAppStyle.less
+++ b/style/globalAppStyle.less
@@ -18,4 +18,19 @@ body {
 #content
 {
     margin-left: 64px;
+    height: 100%;
+    width: calc(~"100% - 64px");
+    .app-container 
+    {
+        width: 100%;
+        height: 100%;
+    }
+    .full-view-page {
+        width: 100%;
+        height: 100%;
+    }
+}
+.row 
+{
+    margin: 0px !important;
 }
