small editor changes

--- a/ts/views/editor/layout/EditorLayout.less
+++ b/ts/views/editor/layout/EditorLayout.less
@@ -7,4 +7,6 @@
     .ui-layout-resizer {
         border: 0px;
     }
+
+    @import (inline) "bower_components/jquery-ui-layout-bower/source/stable/layout-default.css";
 }
