--- a/style/colors.less
+++ b/style/colors.less
@@ -1,10 +1,40 @@
-@bg-color         : #e7ebee;
+@bg-color: #e7ebee;
 /**
  * Navbar
  */
-@navbar-bg-color  : #1A67A8;
-@navbar-button-bg : rgb(16, 72, 121);
+@navbar-bg-color: #1A67A8;
+@navbar-button-bg: rgb(16, 72, 121);
 /**
  * Panels
  */
-@pagePanelBgColor : #fff;
+@pagePanelBgColor: #fff;
+@appBackground-color: #27282b;
+@app-button-background-color: rgb(225,121,19);
+/* Editor palette */
+@editor-navbar-item-hover         : rgb(8,8,10);
+@editor-dark-color              : rgb(28, 28, 30);
+@editor-medium-dark-color       : rgb(48, 48, 48);
+@layout-pane-background-color   : #3b3c40;
+@layout-toggler-color           : @editor-medium-dark-color;
+@layout-resizebar-color         : @editor-dark-color;
+@layout-resizebar-hover-color   : rgb(119, 121, 130);
+@sidebar-background-color       : rgb(40, 45, 60);
+@sidebar-border-color           : rgb(10, 11, 15);
+@sidebar-hover-color            : rgb(63, 66, 103);
+@sidebar-width                  : 240px;
+@editor-small-field             : 20px;
+@add-color                      : rgb(7, 150, 34); 
+@light-gray-color                : rgb(220,220,220);
+@remove-color                    : rgb(230,23,13);
+@font-color                     : rgb(255, 255, 255);
+@editor-entity-color             : rgb(54, 184, 158);
+@editor-inactive-gray            : rgb(112, 114, 120);
+@editor-success-color            : rgb(13, 177, 201);
+/* button styles*/
+@anchor-button-hover-background-color : rgb(40, 40, 40);
+/*General colors*/
+@disabled-input-color            : rgb(200,200,200);
+/**
+ * Properties
+ */
+@smallHeaderColor                 : rgb(160,160,160);
