settings modal and top bar

--- a/ts/views/layout/LayoutStyle.less
+++ b/ts/views/layout/LayoutStyle.less
@@ -10,11 +10,13 @@
 {
     background-color: #3b3c40;
     padding: 0px !important;
+    border: 0px !important;
 }
 
 .ui-layout-toggler
 {
     background-color: @layout-toggler-color;
+    border: 0px;
 }
 
 /*
