--- a/ts/views/menubar/menubar.less
+++ b/ts/views/menubar/menubar.less
@@ -1,3 +1,7 @@
+@import "colors.less";
+@import "constants.less";
+
 #topbar-content { 
-    height: 48px;
+    height: @topBarHeight;
+    background-color: @editor-dark-color;
 }
