layout panels fixing wip

--- a/ts/views/layout/LayoutStyle.less
+++ b/ts/views/layout/LayoutStyle.less
@@ -6,6 +6,11 @@
     width: 100%;
 }
 
+.layout-full-size-container {
+    height: 100%;
+    width: 100%;
+}
+
 .ui-layout-pane
 {
     background-color: #3b3c40;
