--- a/ts/views/layout/LayoutTabContainer.html
+++ b/ts/views/layout/LayoutTabContainer.html
@@ -1,7 +1,7 @@
 <div class="layout-container-tabs-list">
     <% _.each(tabs, function(tab, index) { %>
         <div class="layout-tab" data-tab-index="<%= index %>">
-            <span><%= tab.title %></span>
+            <span><%= tab.Title %></span>
         </div>
     <% }) %>
 </div>
