--- a/ts/views/layout/LayoutStyle.less
+++ b/ts/views/layout/LayoutStyle.less
@@ -10,12 +10,15 @@
     height: 100%;
     width: 100%;
 }
-
+    
 .ui-layout-pane
 {
     background-color: #3b3c40;
     padding: 0px !important;
     border: 0px !important;
+}
+.ui-layout-center {
+    overflow:hidden;
 }
 
 .ui-layout-toggler
