--- a/ts/views/playback/PlaybackView.html
+++ b/ts/views/playback/PlaybackView.html
@@ -5,8 +5,6 @@
     <i class="fa fa-fx fa-stop"></i>
     <i class="fa fa-fx fa-step-forward"></i>
     <i class="fa fa-fx fa-forward"></i>
-</div>
-<div class="playback-speed">
-    <span>Playback:</span>
-    <span>1x</span>
+    <div>Playback:</div>
+    <div>1x</div>
 </div>
