--- a/ts/views/module/replay/ReplayModule.less
+++ b/ts/views/module/replay/ReplayModule.less
@@ -22,8 +22,16 @@
     .replay-time {
         padding-bottom: 20px;
         text-align: center;
+        span.replay-date {
+
+        }
+        span.replay-clock {
+            display: block;
+            font-size: 48px;
+        }
     }
-    
+
+
     .replay-utils button {
         display: block;
         font-size: 16px;
