--- a/ts/views/module/navigation/NavigationModule.html
+++ b/ts/views/module/navigation/NavigationModule.html
@@ -1,8 +1,51 @@
-<div class="nav-padding">
-    <button class="sim-nav-rot-counter-clock sim-nav-row-1"><i class="fa fa-fx fa-rotate-left"></i> Left</button>
-    <button class="sim-nav-move-fwd sim-nav-row-1">FWD</button>
-    <button class="sim-nav-rot-clock sim-nav-row-1"><i class="fa fa-fx fa-rotate-right"></i> Right</button>
-    <button class="sim-nav-move-left sim-nav-row-2"><i class="fa fa-fx fa-arrow-left"></i> Left</button>
-    <button class="sim-nav-move-right sim-nav-row-2"><i class="fa fa-fx fa-arrow-right"></i> Right</button>
-    <button class="sim-nav-move-back sim-nav-row-2">Back</button>
+<div class="nav-viz-wrapper">
+
+</div>
+<div class="nav-controls-wrapper">
+    <div class="nav-padding">
+    <div class="panel-sub-header">
+        Velocity
+    </div>
+        <button class="sim-nav-rot-counter-clock sim-nav-row-1">
+            <i class="fa fa-fx fa-rotate-left"></i> Left
+        </button>
+        <button class="sim-nav-move-fwd sim-nav-row-1">
+            FWD
+        </button>
+        <button class="sim-nav-rot-clock sim-nav-row-1">
+            <i class="fa fa-fx fa-rotate-right"></i> Right
+        </button>
+        <button class="sim-nav-move-left sim-nav-row-2">
+            <i class="fa fa-fx fa-arrow-left"></i> Left
+        </button>
+        <button class="sim-nav-move-right sim-nav-row-2">
+            <i class="fa fa-fx fa-arrow-right"></i> Right
+        </button>
+        <button class="sim-nav-move-back sim-nav-row-2">
+        Back
+        </button>
+    </div>
+    <div class="nav-padding">
+        <div class="panel-sub-header">
+            Nudge
+        </div>
+        <button class="sim-nav-rot-counter-clock sim-nav-row-1">
+            <i class="fa fa-fx fa-rotate-left"></i> Left
+        </button>
+        <button class="sim-nav-move-fwd sim-nav-row-1">
+            FWD
+        </button>
+        <button class="sim-nav-rot-clock sim-nav-row-1">
+            <i class="fa fa-fx fa-rotate-right"></i> Right
+        </button>
+        <button class="sim-nav-move-left sim-nav-row-2">
+            <i class="fa fa-fx fa-arrow-left"></i> Left
+        </button>
+        <button class="sim-nav-move-right sim-nav-row-2">
+            <i class="fa fa-fx fa-arrow-right"></i> Right
+        </button>
+        <button class="sim-nav-move-back sim-nav-row-2">
+        Back
+        </button>
+    </div>
 </div>
