statusbar and other tweeks

--- a/ts/views/layout/LayoutStyle.less
+++ b/ts/views/layout/LayoutStyle.less
@@ -2,7 +2,7 @@
 @import "constants.less";
 
 #editor-content {
-    height: calc(~'100% - @{topBarHeight}');
+    height: calc(~'100% - @{topBarHeight} - @{statusBarHeight}');
     width: 100%;
 }
 
