nav visual and made some space

--- a/ts/views/statusbar/StatusbarView.less
+++ b/ts/views/statusbar/StatusbarView.less
@@ -6,4 +6,13 @@ div.statusbar {
 	height: @statusBarHeight;
 	background-color: @statusbarColor;
 	width: 100%;
+
+    font-size: 12px;
+
+    padding-top: 2px;
+    padding-left: 5px;
+    i.fa {
+        padding-right: 5px;
+        color: #b5e61d;
+    }
 }
