--- a/ts/views/module/navigation/NavigationModule.less
+++ b/ts/views/module/navigation/NavigationModule.less
@@ -1,11 +1,14 @@
 .module-view.module-navigation {
     @rowHeight: 50px;
-    padding: 20px;
 
     .nav-padding {
         width:100%;
         height: 100%;
         position: relative;
+    }
+    .nav-controls-wrapper
+    {
+        padding: 20px;
     }
 
     button {
