Navigation, new project and toolbar

--- a/ts/views/playback/PlaybackView.html
+++ b/ts/views/playback/PlaybackView.html
@@ -7,4 +7,6 @@
     <i class="fa fa-fx fa-forward"></i>
     <div>Playback:</div>
     <div>1x</div>
+    <div>Mode:</div>
+    <div>Interpolate</div>
 </div>
