--- a/ts/views/modal/BaseModal.html
+++ b/ts/views/modal/BaseModal.html
@@ -9,8 +9,8 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default cancel" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary success">Save changes</button>
       </div>
     </div>
   </div>
