Add screen wip implementation

--- a/ts/views/project/ProjectInformationCardView.html
+++ b/ts/views/project/ProjectInformationCardView.html
@@ -32,4 +32,4 @@
          </div>
     </div>
 </div>
-<span class="project-link"><a href="#!/project/<%= Id %>" target="_self">Open Project</a></span>
+<span class="project-link"><a href="#!/project/<%= Id %>">Open Project</a></span>
