Add Loaded Screens

--- a/ts/views/layout/LayoutStyle.less
+++ b/ts/views/layout/LayoutStyle.less
@@ -16,6 +16,7 @@
     background-color: #3b3c40;
     padding: 0px !important;
     border: 0px !important;
+    overflow: hidden;
 }
 .ui-layout-center {
     overflow:hidden;
