--- a/ts/views/project/ProjectInformationCardView.html
+++ b/ts/views/project/ProjectInformationCardView.html
@@ -25,7 +25,7 @@
              <span class="output-count"><%= NumOfOutputs %></span>
          </div>
          <div class="simulation-status">
-             <% if(isSimulating) {%>
+             <% if(IsSimulating) {%>
                  <i class="fa fa-fx fa-circle"></i>
                  <span>Currently Simulating</span>
              <% } %>
