Render ship and use flexbox for nav control

--- a/ts/views/module/navigation/NavigationModule.less
+++ b/ts/views/module/navigation/NavigationModule.less
@@ -4,17 +4,21 @@
     .nav-padding {
         width:100%;
         height: 100%;
-        position: relative;
     }
     .nav-controls-wrapper
     {
         padding: 20px;
     }
-
+    .nav-control-button-row {
+        height: 32px;
+        /* text-align: justify; */
+        display: flex;
+        /* width: 65px; */
+        /* justify-content: space-between; */
+    }
     button {
         font-size: 16px;
-        position: absolute;
-
+        flex:1;
         @txtButtonWidth : 65px;
 
         &.sim-nav-row-1 {
