--- a/ts/views/module/replay/ReplayModule.html
+++ b/ts/views/module/replay/ReplayModule.html
@@ -2,7 +2,7 @@
     <span class="replay-clock">10:32:13</span>
     <span class="replay-date">1 Dec 2014</span>
 </div>
-<div class="replay-file replay-info">
+<!-- <div class="replay-file replay-info">
 <dl>
     <dt>Num of Files</dt>
     <dd>27</dd>
@@ -11,9 +11,9 @@
     <dt>bar</dt>
     <dd>baz</dd>
 </dl>
-</div>
-<div class="replay-utils">
+</div> -->
+<!-- <div class="replay-utils">
     <button>Plot on Chart</button>
     <button>Plot on map</button>
     <button>Export to excel</button>
-</div>
+</div> -->
